# cpprestsdk

Release/include/cpprest/: oauth1.h
Release/samples/: CMakeLists.txt
Release/samples/GamelibClient/: BaseMenu.h  CMakeLists.txt  GameClient.cpp  GameClient.h  GameEngine.h  GamelibClient.cpp  Info.plist  Main.cpp  MainMenu.cpp  MainMenu.h  gameenginewin32.cpp  steam_appid.txt
Release/samples/GamelibClient/include/shift/: ShiftgamesAPI.h  ShiftgamesParameterCode.h  ShiftgamesResultCode.h
Release/samples/GamelibClient/lib/shift/v100/Win32/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v100/Win32/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v100/x64/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v100/x64/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v110/Win32/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v110/Win32/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v110/x64/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v110/x64/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v120/Win32/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v120/Win32/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v120/x64/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v120/x64/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v140/Win32/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v140/Win32/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v140/x64/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v140/x64/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v141/Win32/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v141/Win32/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v141/x64/Debug/: ShiftgamesAppSDKCpp.lib
Release/samples/GamelibClient/lib/shift/v141/x64/Release/: ShiftgamesAppSDKCpp.lib
Release/samples/Oauth1Client/: CMakeLists.txt  GamelibClient.cpp  Oauth1Client.cpp
Release/src/http/oauth/: oauth1.cpp
